add example contracts

--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "deploy": "yarn workspace @scaffold-eth/hardhat deploy",
     "verify": "yarn workspace @scaffold-eth/hardhat verify",
     "watch": "yarn workspace @scaffold-eth/hardhat watch",
+    "moralis": "yarn workspace @scaffold-eth/hardhat moralis",
     "accounts": "yarn workspace @scaffold-eth/hardhat accounts",
     "balance": "yarn workspace @scaffold-eth/hardhat balance",
+    "deposit": "yarn workspace @scaffold-eth/hardhat deposit",
+    "withdraw": "yarn workspace @scaffold-eth/hardhat withdraw",
     "send": "yarn workspace @scaffold-eth/hardhat send",
     "ipfs": "yarn workspace @scaffold-eth/react-app ipfs",
     "surge": "yarn workspace @scaffold-eth/react-app surge",
