--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -3,31 +3,52 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "pre-commit": [
+    "lint"
+  ],
   "devDependencies": {
-    "eslint": "^7.5.0",
+    "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/constants": "^5.6.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "chai": "^4.3.6",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-prettier": "^3.4.0"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^10.0.5",
+    "eslint-plugin-prettier": "^3.4.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7",
+    "web3": "^1.7.3"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "@tenderly/hardhat-tenderly": "^1.0.10",
-    "@nomiclabs/hardhat-etherscan": "^3.0.1",
-    "chai": "^4.2.0",
+    "axios": "^0.27.2",
+    "chai": "^4.3.6",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.1.1",
     "ethers": "^5.4.4",
     "hardhat": "2.6.0",
+    "hardhat-abi-exporter": "^2.8.0",
     "hardhat-deploy": "^0.9.0",
     "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-abi-exporter": "^2.8.0",
+    "husky": "^7.0.2",
+    "lodash": "^4.17.21",
+    "node-fetch": "^3.2.6",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "solidity-coverage": "^0.7.21"
   },
   "scripts": {
     "chain": "hardhat node --network hardhat --no-deploy",
@@ -37,8 +58,11 @@
     "deploy": "hardhat deploy --export-all ../react-app/src/contracts/hardhat_contracts.json",
     "postdeploy": "hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
+    "moralis": "hardhat run scripts/moralis.js --network localhost",
     "accounts": "hardhat accounts",
     "balance": "hardhat balance",
+    "deposit": "hardhat deposit",
+    "withdraw": "hardhat withdraw",
     "send": "hardhat send",
     "generate": "hardhat generate",
     "account": "hardhat account",
